# oracle-demo

./: .env.example  .gitignore  Cargo.toml  INSTRUCTION  LICENSE  README.md  Taskfile.yml  rust-toolchain.toml  warpdrive.toml
components/aggregator/: Cargo.toml
components/aggregator/src/: lib.rs
components/cron-circuit/: Cargo.toml
components/cron-circuit/src/: coingecko.rs  lib.rs  store.rs  types.rs
components/eth-bridge-circuit/: Cargo.toml
components/eth-bridge-circuit/src/: lib.rs  payload.rs  trigger.rs
components/median-circuit/: Cargo.toml
components/median-circuit/src/: lib.rs  payload.rs  trigger.rs  verify.rs
components/twap-circuit/: Cargo.toml
components/twap-circuit/src/: lib.rs  payload.rs  trigger.rs  twap.rs
contracts/ed25519-security/: Cargo.toml
contracts/ed25519-security/src/tests/: setup.rs
contracts/ed25519-verification/: Cargo.toml
contracts/ed25519-verification/src/tests/: setup.rs  verify.rs
contracts/eth-trigger/: README.md  foundry.toml
contracts/eth-trigger/cache/: solidity-files-cache.json
contracts/eth-trigger/script/: Deploy.s.sol
contracts/eth-trigger/src/: TwapTrigger.sol
contracts/oracle/: Cargo.toml
contracts/oracle/src/: contract.rs  lib.rs  storage.rs  tests.rs
frontend/: index.html  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: oracle.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: EventStream.tsx  FinalCard.tsx  Header.tsx  RequestForm.tsx  Round2Bundle.tsx
frontend/src/lib/: freighter.ts  metamask.ts  oracle.ts
scripts/: bootstrap-keys.sh  build-service.sh  middleware.sh  op-env.sh  upload-component.sh
service/: service.json
wit-definitions/wit/: world.wit
