[package]
name = "cron-circuit"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wit-bindgen = "0.53.1"
wstd = "0.6"

[package.metadata.component]
package = "oracle-demo:cron-circuit"

[profile.release]
opt-level = "s"
lto = true
