[package]
name = "eth-bridge-circuit"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
bincode = "1.3"
stellar-xdr = { version = "26.0.0", features = ["serde", "serde_json", "base64"] }
wit-bindgen = "0.53.1"
wstd = "0.6"

[package.metadata.component]
package = "oracle-demo:eth-bridge-circuit"

[profile.release]
opt-level = "s"
lto = true
