[package]
name = "median-circuit"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stellar-xdr = { version = "26.0.0", features = ["serde", "serde_json", "base64"] }
wit-bindgen = "0.53.1"
sha2 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "zeroize"] }

[package.metadata.component]
package = "oracle-demo:median-circuit"

[profile.release]
opt-level = "s"
lto = true
