[package]
name = "twap-circuit"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
bincode = "1.3"
libm = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stellar-xdr = { version = "26.0.0", features = ["serde", "serde_json", "base64"] }
wit-bindgen = "0.53.1"

[package.metadata.component]
package = "oracle-demo:twap-circuit"

[profile.release]
opt-level = "s"
lto = true
