[package]
name = "ed25519-security"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "26", features = ["alloc"] }
warpdrive-shared = "0.2.4"

[dev-dependencies]
soroban-sdk = { version = "26", features = ["testutils"] }
warpdrive-shared = { version = "0.2.4", features = ["testutils"] }
