[package]
name = "oracle"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "26", features = ["alloc"] }
warpdrive-shared = "0.2.4"

[dev-dependencies]
soroban-sdk = { version = "26", features = ["testutils"] }
warpdrive-shared = { version = "0.2.4", features = ["testutils"] }
[profile.release]
overflow-checks = true
